--- a/package.json
+++ b/package.json
@@ -3,18 +3,23 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.2",
     "clsx": "^1.1.1",
     "next": "latest",
     "next-themes": "^0.0.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "react-parallax-tilt": "^1.5.50"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
+    "eslint": "^7.31.0",
+    "eslint-config-next": "^11.0.1",
     "postcss": "^8.3.5",
     "tailwindcss": "^2.2.4"
   }
