--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
     "@heroicons/react": "^1.0.2",
     "clsx": "^1.1.1",
     "next": "latest",
-    "next-themes": "^0.0.15",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "next-themes": "^0.1.1",
+    "react": "^18.0.0",
+    "react-animated-cursor": "^2.4.0",
+    "react-dom": "^18.0.0",
     "react-icons": "^4.2.0",
     "react-parallax-tilt": "^1.5.50"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
-    "eslint": "^7.31.0",
-    "eslint-config-next": "^11.0.1",
+    "eslint": "^8.14.0",
+    "eslint-config-next": "^12.1.5",
     "postcss": "^8.3.5",
-    "tailwindcss": "^2.2.4"
+    "tailwindcss": "^3.0.24"
   }
 }
